// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-inline-alert #render "error" accent inline alert 1`] = `
<gux-inline-alert accent="error">
  <template shadowrootmode="open">
    <div role="alert" class="gux-inline-alert gux-error">
      <div class="gux-message-wrapper">
        <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
        </gux-icon>
        <gux-screen-reader-beta>
          Error alert with message
        </gux-screen-reader-beta>
        <div class="gux-content">
          <slot name="content">
            <slot>
            </slot>
          </slot>
        </div>
      </div>
    </div>
  </template>
  <div slot="content">
    Note: This is a warning alert.
  </div>
</gux-inline-alert>
`;

exports[`gux-inline-alert #render "info" accent inline alert 1`] = `
<gux-inline-alert accent="info">
  <template shadowrootmode="open">
    <div role="alert" class="gux-inline-alert gux-info">
      <div class="gux-message-wrapper">
        <gux-icon icon-name="fa/circle-info-solid" decorative="" size="small">
        </gux-icon>
        <gux-screen-reader-beta>
          Information alert with message
        </gux-screen-reader-beta>
        <div class="gux-content">
          <slot name="content">
            <slot>
            </slot>
          </slot>
        </div>
      </div>
    </div>
  </template>
  <div slot="content">
    Note: This is an information alert.
  </div>
</gux-inline-alert>
`;

exports[`gux-inline-alert #render "success" accent inline alert 1`] = `
<gux-inline-alert accent="success">
  <template shadowrootmode="open">
    <div role="alert" class="gux-inline-alert gux-success">
      <div class="gux-message-wrapper">
        <gux-icon icon-name="fa/circle-check-solid" decorative="" size="small">
        </gux-icon>
        <gux-screen-reader-beta>
          Success alert with message
        </gux-screen-reader-beta>
        <div class="gux-content">
          <slot name="content">
            <slot>
            </slot>
          </slot>
        </div>
      </div>
    </div>
  </template>
  <div slot="content">
    Note: This is a success alert.
  </div>
</gux-inline-alert>
`;

exports[`gux-inline-alert #render "warning" accent inline alert 1`] = `
<gux-inline-alert accent="warning">
  <template shadowrootmode="open">
    <div role="alert" class="gux-inline-alert gux-warning">
      <div class="gux-message-wrapper">
        <gux-icon icon-name="fa/triangle-exclamation-solid" decorative="" size="small">
        </gux-icon>
        <gux-screen-reader-beta>
          Warning alert with message
        </gux-screen-reader-beta>
        <div class="gux-content">
          <slot name="content">
            <slot>
            </slot>
          </slot>
        </div>
      </div>
    </div>
  </template>
  <div slot="content">
    Note: This is a warning alert.
  </div>
</gux-inline-alert>
`;
